# SingleArUco2

./: CMakeLists.txt  README.md  RTC.xml  rtc.conf
cmake/: singlearuco2-config.cmake.in
doc/: conf.py.in
include/: CMakeLists.txt
include/SingleArUco2/: CMakeLists.txt  SingleArUco2.h
scripts/ubuntu_1604/: Dockerfile
scripts/ubuntu_1804/: Dockerfile
serializer/: CMakeLists.txt  TestSerializer.cpp
src/: CMakeLists.txt  SingleArUco2.cpp  SingleArUco2Comp.cpp
test/include/: CMakeLists.txt
test/include/SingleArUco2Test/: CMakeLists.txt  SingleArUco2Test.h
test/src/: CMakeLists.txt  SingleArUco2Test.cpp  SingleArUco2TestComp.cpp
